Bugfix: review card content overflowed to the buttons (#135)

--- a/resources/sass/Review/Review.scss
+++ b/resources/sass/Review/Review.scss
@@ -1,5 +1,9 @@
 @import './../variables';
 
+#review-box #review-card ::-webkit-scrollbar {
+    background: var(--v-foreground-base);
+}
+
 #review-box {
     position: relative;
     display: block;
@@ -16,11 +20,37 @@
         font-family: notosans-sc !important;
     }
 
-    #review-reveal-button,
-    #review-correct-button,
-    #review-wrong-button {
-        width: 150px;
+    .review-button-box {
         box-sizing: border-box;
+        position: absolute !important;
+        display: block;
+        left: 0px;
+        width: 100%;
+        height: 0px;
+        bottom: 0px;
+        
+        #review-reveal-button {
+            position: absolute;
+            box-sizing: border-box;
+            top: 28px;
+            width: 150px;
+            left: 50%;
+            transform: translate(-50%, 0%);
+        }
+
+        #review-correct-button,
+        #review-wrong-button {
+            position: absolute;
+            box-sizing: border-box;
+            top: 28px;
+            width: 150px;
+            left: 50%;
+            transform: translate(1%, 0%);
+        }
+
+        #review-correct-button {
+            transform: translate(-101%, 0%);
+        }
     }
 
     #toolbar {
@@ -79,12 +109,13 @@
         display: block;
         margin: 10px auto;
         width: 600px;
-        min-height: 320px;
+        height: 400px;
         perspective: 800px;
         margin-top: 25px;
         animation: none;
         
         #review-card-content {
+            display: flex;
             position: absolute;
             width: 100%;
             height: 100%;
@@ -137,7 +168,8 @@
             text-align: center;
             display: block;
             position: absolute;
-            height: 100%;
+            height: auto;
+            min-height: 360px;
             width: 100%;
             background: var(--v-foreground-base);
             color: var(--v-text-base);
@@ -159,39 +191,17 @@
             }
         }
 
-        #review-card-front {
-            display: flex;
-            align-items: start;
+        #review-card-front,
+        #review-card-back {
             justify-content: center;
             
             .single-word {
                 display: block;
-                // font-family: notosans-jp !important;
             }
         }
 
         #review-card-back {
             transform: rotateY( 180deg );
-            .single-word, .reading {
-                // font-family: notosans-jp !important;
-            }
-        }
-    }
-
-    // set font for chinese text
-    &.chinese-font {
-        // font-family: notosans-sc !important;
-        
-        #review-card {
-            #review-card-front .single-word {
-                // font-family: notosans-sc !important;
-            }
-
-            #review-card-back {
-                .single-word, .reading {
-                    // font-family: notosans-sc !important;
-                }
-            }
         }
     }
 }
@@ -213,7 +223,7 @@
     }
     
     100% {
-        transform: rotateY( -180deg ) translate(-420px, -175px) scale(0);
+        transform: rotateY( -180deg ) translate(-420px, -240px) scale(0);
     }
 }
 
@@ -223,13 +233,13 @@
     }
     
     100% {
-        transform: rotateY( -180deg ) translate(420px, -175px) scale(0);
+        transform: rotateY( -180deg ) translate(420px, -240px) scale(0);
     }
 }
 
 @keyframes review-card-new-animation {
     0%   {
-        transform: rotateY( -180deg ) translate(-420px, -175px) scale(0);
+        transform: rotateY( -180deg ) translate(-420px, -240px) scale(0);
     }
     
     100% {
